--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                     <div class="divider"></div>
                   </div>
                   <div class="sixteen wide column">
-                    <!-- Intro -->
+                    <h2>Résumé</h2>
+                    <p>&mdash; I am JavaScript developer. I like JavaScript and what it does to me. I will stop at nothing and one day I will become a cool developer.</p>
                   </div>
                 </div>
               </div>
