--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   <h1 class="name">Andrii Solohub</h1>
                   <div class="job">JavaScript Developer</div>
                   <ul class="contacts">
-                   
+
                     <li>
                       <a href="mailto:andrei.sologub12@gmail.com" rel="author" class="mail">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
@@ -83,6 +83,38 @@
           <div class="row">
             <div class="ten wide column">
               <!-- Experience -->
+              <h3>Experience</h3>
+              <ul class="timeline">
+                <li>
+                  <p><small>August 2020 – Junuary 2021</small></p>
+                  <p>External JavaScript Course by EPAM</p>
+                </li>
+                <li>
+                  <p><small>March 2020 – May 2020</small></p>
+                  <p>Web UI/UX Course by SoftServe. This course was taught at our university as an elective discipline
+                    for junior courses. As soon as I found out, I asked to be a listener.</p>
+                </li>
+                <li>
+                  <p><small>At the end of 2019</small></p>
+                  <p>I got to know about the Javascript programming language and started taking the time to self-study.
+                  </p>
+                </li>
+                <li>
+                  <p><small></small></p>
+                  <p></p>
+                </li>
+              </ul>
+              <h3>Education</h3>
+              <ul class="timeline">
+                <li>
+                  <p><small>2019</small></p>
+                  <p>Received a bachelor's degree in Computer and Mathematical Modeling.</p>
+                </li>
+                <li>
+                  <p><small>2015</small></p>
+                  <p>Started studying in National Technical University “Kharkiv Polytechnic Institute”.</p>
+                </li>
+              </ul>
             </div>
             <div class="six wide column">
               <!-- Languages -->
