--- a/index.html
+++ b/index.html
@@ -86,32 +86,29 @@
               <h3>Experience</h3>
               <ul class="timeline">
                 <li>
-                  <p><small>August 2020 – Junuary 2021</small></p>
+                  <p><em>August 2020 – Junuary 2021</em></p>
                   <p>External JavaScript Course by EPAM</p>
                 </li>
                 <li>
-                  <p><small>March 2020 – May 2020</small></p>
+                  <p><em>March 2020 – May 2020</em></p>
                   <p>Web UI/UX Course by SoftServe. This course was taught at our university as an elective discipline
                     for junior courses. As soon as I found out, I asked to be a listener.</p>
                 </li>
                 <li>
-                  <p><small>At the end of 2019</small></p>
+                  <p><em>At the end of 2019</em></p>
                   <p>I got to know about the Javascript programming language and started taking the time to self-study.
                   </p>
                 </li>
-                <li>
-                  <p><small></small></p>
-                  <p></p>
-                </li>
+                
               </ul>
               <h3>Education</h3>
               <ul class="timeline">
                 <li>
-                  <p><small>2019</small></p>
+                  <p><em>2019</em></p>
                   <p>Received a bachelor's degree in Computer and Mathematical Modeling.</p>
                 </li>
                 <li>
-                  <p><small>2015</small></p>
+                  <p><em>2015</em></p>
                   <p>Started studying in National Technical University “Kharkiv Polytechnic Institute”.</p>
                 </li>
               </ul>
