--- a/index.html
+++ b/index.html
@@ -115,7 +115,15 @@
             </div>
             <div class="six wide column">
               <!-- Languages -->
+              <section>
+                <h3>Languages</h3>
+                <p class="tags small">&#x1f1fa;&#x1f1e6; <span>УКРАЇНСЬКА</span> &#x1f1f7;&#x1f1fa; <span>РУССКИЙ</span> <span>&#x1f1fa;&#x1f1f8; ENGLISH - Pre-intermediate</span></p>
+              </section>
               <!-- Skills -->
+              <section>
+                <h3>Skills</h3>
+                <p class="tags small">HTML CSS JS BOOTSTRAP LESS SASS WEBPACK NODEJS NPM WINDOWS SQL</p>
+              </section>
               <!-- Character -->
               <!-- Likes -->
               <!-- Dislikes -->
