Chenge the border and selection color

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <body>
   <main>
     <article>
-      <div class="page" style="border-color: midnightblue;">
+      <div class="page" style="border-color: green;">
         <div class="stackable grid">
           <div class="row">
             <div class="three wide center aligned column">
-              <!-- Avatar -->
+              <div class="avatar-wrapper">
+                <object class="avatar" data="avatar.jpg" role="img" aria-label="My profile picture"></object>
+              </div>
             </div>
             <div class="thirteen wide column">
               <div class="stackable grid">
                 <div class="sixteen wide column">
-                  <!-- Name, job, contacts -->
                   <h1 class="name">Andrii Solohub</h1>
                   <div class="job">JavaScript Developer</div>
                   <ul class="contacts">
-
                     <li>
                       <a href="mailto:andrei.sologub12@gmail.com" rel="author" class="mail">
                         <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
@@ -82,7 +82,6 @@
           </div>
           <div class="row">
             <div class="ten wide column">
-              <!-- Experience -->
               <h3>Experience</h3>
               <ul class="timeline">
                 <li>
@@ -91,7 +90,8 @@
                 </li>
                 <li>
                   <p><em>March 2020 – May 2020</em></p>
-                  <p>Web UI/UX Course by SoftServe. This course was taught at our university as an elective discipline
+                  <p>Web UI/UX Course by SoftServe.</p>
+                  <p>This course was taught at our university as an elective discipline
                     for junior courses. As soon as I found out, I asked to be a listener.</p>
                 </li>
                 <li>
@@ -114,22 +114,30 @@
               </ul>
             </div>
             <div class="six wide column">
-              <!-- Languages -->
               <section>
                 <h3>Languages</h3>
-                <p class="tags small">&#x1f1fa;&#x1f1e6; <span>УКРАЇНСЬКА</span> &#x1f1f7;&#x1f1fa; <span>РУССКИЙ</span> <span>&#x1f1fa;&#x1f1f8; ENGLISH - Pre-intermediate</span></p>
+                <p class="tags small">&#x1f1fa;&#x1f1e6; <span>УКРАЇНСЬКА</span> &#x1f1f7;&#x1f1fa; <span>РУССКИЙ</span> <span><br>&#x1f1fa;&#x1f1f8; ENGLISH - Pre-intermediate</span></p>
               </section>
-              <!-- Skills -->
               <section>
                 <h3>Skills</h3>
-                <p class="tags small">HTML CSS JS BOOTSTRAP LESS SASS WEBPACK NODEJS NPM WINDOWS SQL</p>
+                <p class="tags small">HTML CSS JS BOOTSTRAP LESS SASS WEBPACK NODEJS NPM SQL</p>
               </section>
-              <!-- Character -->
-              <!-- Likes -->
-              <!-- Dislikes -->
-              <!-- Wants -->
-              <!-- Education -->
-              <!-- Articles -->
+              <section>
+                <h3>Character</h3>
+                <p class="tags small">CALM LISTENER CURIOUS RESOURCEFUL EXPLORER OBSERVER STRAIGHTFORWARD DEVOTED PROCRASTINATOR CONFIDENT CHALLENGING</p>
+              </section>
+              <section>
+                <h3>Likes&#x1f603;</h3>
+                <p class="tags small">HUMOUR MOVIES MOUNTAINS TV-SHOWS SNOWBORD LONGBORD CARS BASKETBALL TRAVEL DREAM<button id="green" class="color green">GREEN</button> NATURE</p>
+              </section>
+              <section>
+                <h3>Dislikes&#x1f61e;</h3>
+                <p class="tags small"><span class="nowrap">WRITE A CV</span> <span class="nowrap">GEESE</span></p>
+              </section>
+              <section>
+                <h3>Wants&#x1f97a;</h3>
+                <p class="tags small bulleted"><span class="tag">BARBECUE</span><span class="tag">TO BECOME A DEVELOPER</span><span class="tag">TO MAKE A FLIP</span><span class="tag">TO GO ENGLISH COURSE</span><span class="tag">TO LIVE CLOSE TO MOUNTAINS</span><span class="tag">TO BUILD A MOBILE HOUSE</span><span class="tag">TO BECOME A SUPERHERO</span><span class="tag">TO LISTEN AND LEARN</span></p>
+              </section>
             </div>
           </div>
         </div>
