--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="My very own personal website.">
+  <meta name="subject" content="This is just a résumé.">
+  <meta name="robots" content="index,follow">
+  <meta name="googlebot" content="index,follow">
+  <meta name="theme-color" content="white">
   <title>Résumé</title>
-  <link rel="stylesheet" href="base.css">
+	<link rel="me" href="mailto:andrei.sologub12@gmail.com">
+	<link rel="me" href="tel:+380505841411">
+  <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
 </head>
 
 <body>
